# tagore_auto_analysis

./: .gitignore  .tagore_cache.parquet  CLAUDE.md  dataset.py  program.md  pyproject.toml  research_log.md
experiments/: .translation_cache.json  experiment_001.py  experiment_002.py  experiment_003.py  experiment_004.py  experiment_005.py  experiment_006.py  experiment_007.py  experiment_008.py  experiment_009.py  experiment_010.py  experiment_011.py  experiment_012.py  experiment_013.py  experiment_014.py  experiment_015.py  experiment_016.py  experiment_017.py  experiment_018.py  experiment_019.py  experiment_020.py  experiment_021.py  experiment_022.py  experiment_023.py  experiment_024.py  experiment_025.py  experiment_026.py  experiment_027.py  experiment_028.py  experiment_029.py  experiment_030.py  experiment_031.py  experiment_032.py  experiment_033.py  experiment_034.py  experiment_035.py  experiment_036.py  experiment_037.py
experiments/exp010_taal_complexity_reclassified/: README.md  run.py
experiments/exp027_pronoun_ratio_evolution/: README.md  decomposition.txt  decomposition_puja_prem.txt  findings_puja_prem.md  run.py  run_puja_prem.py
